Created Firebase event when adding new train to database, new row is displayed in html.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,8 @@ body {
 
 #train-table th, td {
     display: inline-block;
-    width: 16.575%;
+    width: 20%;
+    text-align: left;
 }
 
 .jumbotron {
